--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.memoryprofiler": "1.1.0",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.postprocessing": "3.3.0",
     "com.unity.recorder": "5.0.0",
     "com.unity.render-pipelines.universal": "16.0.4",
